--- a/theme/snapr/css/pages.less
+++ b/theme/snapr/css/pages.less
@@ -1389,7 +1389,7 @@
         display: block;
         position: absolute;
         width: @size-small-avatar;
-        padding-right: @corner-general-less-rounded;
+        padding-right: 0;
         height: @size-small-avatar;
         background: @color-bg-highlight-main;
         .linear-gradient(@color-bg-highlight-main-tint, @color-bg-highlight-main);
